# tutorial_pytorch_japanese

./: .gitignore  README.md  env.yaml  hardware.md  pyproject.toml
.github/workflows/: lint.yaml
00-installation/: README.md
01-MNIST/: README.md  main.py
02-log_plot/: README.md
02-log_plot/py/: main.py  model.py  utils.py
02-log_plot/txt/: requirements.txt
03-raw_dataset/: README.md
03-raw_dataset/py/: alex.py  loadDB.py  main.py  train_test_split.py
03-raw_dataset/scripts/: download.sh
1-classification_mnist/: README.md
1-classification_mnist/py/: main.py  model.py  utils.py
1-classification_mnist/scripts/: tensorboard.sh
1-classification_mnist/txt/: requirements.txt
1_classification_animeface/: .gitignore  README.md  train.sh
1_classification_animeface/conf/: config.yaml
1_classification_animeface/config/: config.yaml
1_classification_animeface/py/: MlflowWriter.py  args.py  datasets.py  main.py  model.py  setup.py  train_val.py  utils.py
2-classification_anime/: README.md
2-classification_anime/py/: alex.py  args.py  loadDB.py  main.py  model.py  preprocess.py  search_param.py  train_test.py  train_test_split.py  train_val.py  utils.py
2-classification_anime/scripts/: tensorboard.sh
2-classification_anime_dist/py/: args.py  main.py  model.py  utils.py
2_classification_food101/: train.sh
2_classification_food101/config/: config.yaml
2_classification_food101/py/: datasets.py  download.py  main.py  mobilenet_v2.py  resnet.py  train_val.py
2_classification_food101_ddp/: DDP.md  DP.md  README.md
2_classification_food101_dp/: README.md  train.sh
2_classification_food101_dp/config/: config.yaml
2_classification_food101_dp/py/: MlflowWriter.py  args.py  main.py  model.py  resnet.py  train_val.py  utils.py
3-detection_voc/: README.md
3-detection_voc/py/: args.py  loadDB.py  loss.py  main.py  train_test.py  train_test.py~master  utils.py~HEAD
3-detection_voc/py_backup/: main.py  preprocess.py
3-distribution_training/: README.md
3-distribution_training/py/: args.py  loadDB.py  main.py  preprocess.py  train_val.py  utils.py
3-quantize_classification/: README.md  all.sh
3_classification_food101_ddp/: train.sh
3_classification_food101_quantization/: README.md
4-detection_voc/: README.md
4-quantize_classification/: .gitignore  quantize.sh
5-segment_Penn-Fudan/: README.md
5-segmentation_voc/: README.md  demo.sh  train.sh
notebook/: README.md  profile.ipynb  pruning.ipynb  torchscript.ipynb  visualize_param_saerch.ipynb
(+77 files in other folders)
