[tool.poetry]
name = "tutorial_pytorch_japanese"
version = "0.1.0"
description = ""
authors = ["chatflip <oo.chat.flip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
hydra-core = "^1.0.6"
mlflow = "^1.15.0"
pysen = "^0.9.1"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
mypy = "^0.812"
efficientnet-pytorch = "^0.6.3"
albumentations = "^0.5.2"
segmentation-models-pytorch = "^0.1.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py37"

[tool.pysen.lint.source]
  includes = [
    "./1_classification_animeface",
    "./2_classification_food101",
  ]
  excludes = ["./backup"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
