[tool.poetry]
name = "tutorial_pytorch_japanese"
version = "0.1.0"
description = ""
authors = ["chatflip <oo.chat.flip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
hydra-core = "^1.0.6"
mlflow = "^1.15.0"
segmentation-models-pytorch = "^0.1.3"
efficientnet-pytorch = "*"
albumentations = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pysen = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
autopep8 = "*"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py37"

[tool.pysen.lint.source]
  include_globs = ["**/*/py/*.py"]
  excludes = [
    "./backup",
    "./3_classification_food101_ddp",
    "./4-quantize_classification",
  ]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
